📝 Agregando documentación API Parte #2
